# experiments_vector_paper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default.nix
data/scripts/: format_BPPLIB.py  generate_Hetero_multidim.py  generate_Irregular_multidim.py  generate_New_multidim.py  generate_Panigrahy_multidim.py  generate_Triplet_multidim.py  instance.py
results_data/: New_base_OPT.csv  New_multidim_full.csv  New_summary_known.csv  Panigrahy_base_OPT.csv  Panigrahy_summary_known.csv  Triplet_multidim.csv  Triplet_summary_known.csv  merge_OPT.py
results_data/notebooks/: analysis_1dim.ipynb  compare_algos.ipynb
src/: algo_lists.hpp  main_1dim.cpp  main_multidim.cpp
